syntax = "proto3";

package pb;

message String {
    string value = 1;
}

service HelloService {
    rpc Hello (String) returns (String);
}